--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Enclousers</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div id="qa-block" class="box__first">
+    <div class="box__second">
+      <div class="box__third">
+        <p>In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.</p>
+      </div>
+    </div>
+  </div>
+  <div class="box__first">
+    <div class="box__second">
+      <div class="box__third">
+        <p></p>У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.</p>
+      </div>
+    </div>
+  </div>
+  <div class="box__first">
+    <div class="box__second">
+      <div class="box__third">
+        <p>Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.</p>
+      </div>
+    </div>
+  </div>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
