--- a/src/index.html
+++ b/src/index.html
@@ -13,27 +13,30 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="qa-block" class="box__first">
-    <div class="box__second">
-      <div class="box__third">
+  <div id="qa-block" class="box box__color--first">
+    <div class="box box__color--second">
+      <div class="box box__color--third">
         <p>In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.</p>
       </div>
     </div>
   </div>
-  <div class="box__first">
-    <div class="box__second">
-      <div class="box__third">
+
+  <div class="box box__color--first">
+    <div class="box box__color--second">
+      <div class="box box__color--third">
         <p></p>У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.</p>
       </div>
     </div>
   </div>
-  <div class="box__first">
-    <div class="box__second">
-      <div class="box__third">
+
+  <div class="box box__color--first">
+    <div class="box box__color--second">
+      <div class="box box__color--third">
         <p>Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.</p>
       </div>
     </div>
   </div>
+
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
